# limit_order_book

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
order_book_python/: README.md
order_book_python/cli/: dashboard.py  run_dashboard.py  run_simulation.py
order_book_python/engine/: book_side.py  matching_engine.py  order_validation.py  price_level.py  state_validation.py
order_book_python/engine/types/: enums.py  events.py  instrument.py  orders.py  requests.py
order_book_python/simulation/: clock.py  config.py  generator.py  runner.py
order_book_python/tests/test_cli/: test_dashboard.py  test_run_dashboard.py  test_run_simulation.py
order_book_python/tests/test_engine/: helpers.py  test_book_side.py  test_matching_engine.py  test_price_level.py
order_book_python/tests/test_simulation/: helpers.py  test_clock.py  test_config.py  test_generator.py  test_runner.py
