[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limit-order-book"
version = "0.1.0"
description = "An exchange-style limit order book implemented in Python."
readme = "order_book_python/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Sachin Peterson" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
order-book-dashboard = "order_book_python.cli.run_dashboard:main"
order-book-simulation = "order_book_python.cli.run_simulation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["order_book_python*"]

[tool.pytest.ini_options]
testpaths = ["order_book_python/tests"]
