[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limit-order-book"
version = "0.1.0"
description = "A Python limit order book and matching engine."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["order_book_python*"]
